--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
   Copyright 2020 Git. Frank Daza Training.
 -->
 <head>
-	<title>An example web site</title>
+	<title>Google by Frank Daza</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			More different changes
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; by non-Google Frank Daza Company 2020</p>
 	</footer>
 </body>
 </html>
