mb before rebase conflicts.

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
   Copyright 2020 Git. Frank Daza Training.
+  Adding changes before rebasing conflicts.
 -->
 <head>
 	<title>Google by Frank Daza and more</title>
