--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
   Copyright 2020 Git. Frank Daza Training.
-  Oh noooooooooooooooo conflicts.
+  These changes are from the feature branch bigtrouble..
 -->
 <head>
-	<title>My gosh!!!!! and more</title>
+	<title>More changes!</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
