mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
   Copyright 2020 Git. Frank Daza Training.
-  Adding changes before rebasing conflicts.
+  Oh noooooooooooooooo conflicts.
 -->
 <head>
-	<title>Google by Frank Daza and more</title>
+	<title>My gosh!!!!! and more</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Ayudaaaaaa !!!!! Content Goes Here -->
 		<p>
-			More different change oki dokis
+			Esto se va a descontrolar!!!
 		</p>
 	</main>
 	<footer class="container">
