Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
   Copyright 2020 Git. Frank Daza Training.
-  These changes are from the feature branch bigtrouble..
 -->
 <head>
-	<title>More changes!</title>
+	<title>Lots of trouble, !More changes!</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
