local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; by non-Google Frank Daza Company 2020 oops I did it again</p>
+		<p>&copy; EDIT FOR ME !!!mpany 2020 oops I did it again</p>
 	</footer>
 </body>
 </html>
