--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
   Copyright 2020 Git. Frank Daza Training.
 -->
 <head>
-	<title>Lots of trouble, !More changes!</title>
+	<title>Updating Title for stash Example!</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Ayudaaaaaa !!!!! Content Goes Here -->
 		<p>
-			Esto se va a descontrolar!!!
+			Adding more important content here!
 		</p>
 	</main>
 	<footer class="container">
