--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
   Copyright 2020 Git. Frank Daza Training.
 -->
 <head>
-	<title> Updating Title for stash Example!</title>
+	<title>Updating Title for tagging compare Example!</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
